src/objects/IMS_Secondary_Data_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Terms_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Terms Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_For_Atypical_Combination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check For Atypical Combination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Manager_Email__c</fullName>
        <description>Commercial Manager Email</description>
        <label>Commercial Manager Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Manager_Name__c</fullName>
        <description>Name of the Commercial Manager</description>
        <label>Commercial Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Error_Message__c</fullName>
        <label>Delete Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>English_Translation__c</fullName>
        <label>English Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Level__c</fullName>
        <label>Geo Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Sub-National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Legal_Entity__c</fullName>
        <label>IMS Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMS AG</fullName>
                </value>
                <value>
                    <fullName>IMS Health Canada Inc.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Incorporated</fullName>
                </value>
                <value>
                    <fullName>IMS Health S.r.l.</fullName>
                </value>
                <value>
                    <fullName>IMSWorld Publications Limited</fullName>
                </value>
                <value>
                    <fullName>IMS LLC</fullName>
                </value>
                <value>
                    <fullName>SK&amp;A Information Services, Inc.</fullName>
                </value>
                <value>
                    <fullName>Grace Data Corporation d/b/a Healthcare Data Solutions</fullName>
                </value>
                <value>
                    <fullName>IMS Health Technology Solutions Inc.</fullName>
                </value>
                <value>
                    <fullName>ASESORIAS IMS HEALTH CHILE</fullName>
                </value>
                <value>
                    <fullName>Asserta Centroamérica, S. A.</fullName>
                </value>
                <value>
                    <fullName>Datandina Ecuador</fullName>
                </value>
                <value>
                    <fullName>DE04 - IMS Software AG, Bonn</fullName>
                </value>
                <value>
                    <fullName>DE 50 - IMS HEALTH GmbH</fullName>
                </value>
                <value>
                    <fullName>Dummy Legal Entity</fullName>
                </value>
                <value>
                    <fullName>GB 60 - IMS Hospital Group</fullName>
                </value>
                <value>
                    <fullName>IMS AG (Mexico Representative Office)</fullName>
                </value>
                <value>
                    <fullName>IMS Health, Lda</fullName>
                </value>
                <value>
                    <fullName>IMS Health, S.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health, S.r.l.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Argentina S.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Bolivia SRL</fullName>
                </value>
                <value>
                    <fullName>IMS Health del Peru</fullName>
                </value>
                <value>
                    <fullName>IMS Health de Venezuela C.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health do Brasil Ltda.</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH GmbH</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH GmbH &amp; Co. OHG</fullName>
                </value>
                <value>
                    <fullName>Quintiles IMS Incorporated</fullName>
                </value>
                <value>
                    <fullName>IMS health ltd</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH PARAGUAY SRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Legal_Name__c</fullName>
        <label>IMS Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_AMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Restricted_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Restricted Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japanese_Translation__c</fullName>
        <label>Japanese Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Map_To_Primary_Data_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Map To Primary Data Asset</label>
        <referenceTo>IMS_Data_Asset__c</referenceTo>
        <relationshipLabel>IMS Secondary Data Assets (Map To Primary Data Asset)</relationshipLabel>
        <relationshipName>IMS_Secondary_Data_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Map_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Map To</label>
        <referenceTo>IMS_Secondary_Data_Asset__c</referenceTo>
        <relationshipLabel>IMS Secondary Data Assets</relationshipLabel>
        <relationshipName>Old_IMS_Secondary_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_license_or_data_supplier_permission__c</fullName>
        <description>Confirmation to the provisioning of the offering required an additional external license or data supplier confirmation</description>
        <label>Need license or data supplier permission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_level_additional_term__c</fullName>
        <description>Commercial Manager Q&amp;A format &amp; reason</description>
        <label>Offering level additional term</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Data_Asset__c</fullName>
        <label>Primary Data Asset</label>
        <referenceTo>IMS_Data_Asset__c</referenceTo>
        <relationshipLabel>IMS Secondary Data Assets</relationshipLabel>
        <relationshipName>IMS_Secondary_Data_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requires_Manual_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Manual Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Secondary_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Secondary Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Asset_Name__c</fullName>
        <label>Secondary Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Commercial_Reviewer_Email__c</fullName>
        <description>Added Under TPA-MC-ESPSFDCTPA-2796</description>
        <label>Secondary Commercial Reviewer Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Commercial_Reviewer_Name__c</fullName>
        <description>Added under TPA-MC-ESPSFDCTPA-2796</description>
        <label>Secondary Commercial Reviewer Name</label>
        <type>TextArea</type>
    </fields>
    <label>IMS Secondary Data Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Secondary_Asset_Name__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Primary_Data_Asset__c</columns>
        <columns>IMS_Legal_Entity__c</columns>
        <columns>IMS_Legal_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Secondary Asset-{00000}</displayFormat>
        <label>IMS Secondary Data Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Secondary Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MapToPrimaryValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( OR(Not(ISBlank(Map_To_Primary_Data_Asset__c)),Not(ISBlank(Map_To__c)) ),Is_Active__c), True, False)</errorConditionFormula>
        <errorMessage>The secondary offering cannot be active if getting mapped to a primary/secondary offering</errorMessage>
    </validationRules>
</CustomObject>